// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repo/Summary/List Default smoke-test 1`] = `
<div class="space-y-5">
  <div class="prose">
    <h3>
      Featured Repositories
    </h3>
  </div>
  <a class="card w-96 bg-primary text-primary-content"
     href="/repo/"
  >
    <div class="card-body">
      <h2 class="card-title svelte-jesdj">
        Short Name
      </h2>
      <p class="svelte-jesdj">
        short description
      </p>
    </div>
  </a>
  <a class="card w-96 bg-primary text-primary-content"
     href="/repo/"
  >
    <div class="card-body">
      <h2 class="card-title svelte-jesdj">
        Long Name that goes on and on and on and on a...
      </h2>
      <p class="svelte-jesdj">
        Lorem ipsum dolor sit amet, consectetur adipi...
      </p>
    </div>
  </a>
  <a class="card w-96 bg-primary text-primary-content"
     href="/repo/"
  >
    <div class="card-body">
      <h2 class="card-title svelte-jesdj">
        LongNameLongNameLongNameLongNameLongNameLongN...
      </h2>
      <p class="svelte-jesdj">
        LoremipsumLoremipsumLoremipsumLoremipsumLorem...
      </p>
    </div>
  </a>
</div>
`;

exports[`Repo/Summary/List Empty smoke-test 1`] = `
<div class="space-y-5">
  <div class="prose">
    <h3>
      Latest
    </h3>
  </div>
  <p class="prose">
    None
  </p>
</div>
`;

exports[`Repo/Summary/List Loading smoke-test 1`] = `
<div class="space-y-5">
  <div class="prose">
    <h3>
      Latest
    </h3>
  </div>
  <div class="card w-96 bg-neutral text-neutral-focus">
    <div class="card-body">
      <div class="text-center">
        <span class="loading loading-spinner loading-lg text-base-100">
        </span>
      </div>
    </div>
  </div>
  <div class="card w-96 bg-neutral text-neutral-focus">
    <div class="card-body">
      <div class="text-center">
        <span class="loading loading-spinner loading-lg text-base-100">
        </span>
      </div>
    </div>
  </div>
  <div class="card w-96 bg-neutral text-neutral-focus">
    <div class="card-body">
      <div class="text-center">
        <span class="loading loading-spinner loading-lg text-base-100">
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Repo/Summary/List No Title smoke-test 1`] = `
<div class="space-y-5">
  <a class="card w-96 bg-primary text-primary-content"
     href="/repo/"
  >
    <div class="card-body">
      <h2 class="card-title svelte-jesdj">
        Short Name
      </h2>
      <p class="svelte-jesdj">
        short description
      </p>
    </div>
  </a>
  <a class="card w-96 bg-primary text-primary-content"
     href="/repo/"
  >
    <div class="card-body">
      <h2 class="card-title svelte-jesdj">
        Long Name that goes on and on and on and on a...
      </h2>
      <p class="svelte-jesdj">
        Lorem ipsum dolor sit amet, consectetur adipi...
      </p>
    </div>
  </a>
</div>
`;

exports[`Repo/Summary/List Partially Loaded smoke-test 1`] = `
<div class="space-y-5">
  <div class="prose">
    <h3>
      Latest
    </h3>
  </div>
  <a class="card w-96 bg-primary text-primary-content"
     href="/repo/"
  >
    <div class="card-body">
      <h2 class="card-title svelte-jesdj">
        Short Name
      </h2>
      <p class="svelte-jesdj">
        short description
      </p>
    </div>
  </a>
  <a class="card w-96 bg-primary text-primary-content"
     href="/repo/"
  >
    <div class="card-body">
      <h2 class="card-title svelte-jesdj">
        Long Name that goes on and on and on and on a...
      </h2>
      <p class="svelte-jesdj">
        Lorem ipsum dolor sit amet, consectetur adipi...
      </p>
    </div>
  </a>
  <div class="card w-96 bg-neutral text-neutral-focus">
    <div class="card-body">
      <div class="text-center">
        <span class="loading loading-spinner loading-lg text-base-100">
        </span>
      </div>
    </div>
  </div>
</div>
`;
